app/assets/stylesheets/styles.css
.body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.main {
  flex-grow: 1;
}

.container {
  width: 85%;
  max-width: 1000px;
  margin: 0 auto;
}

.primary-header {
  font-family: var(--font-header);
  padding: 2.5em;
  text-align: center;
  color: var(--color-primary-900);
}

.main-header {
  font-size: 2rem;
  font-weight: var(--font-weight-bold);
  line-height: 1;
}

.sub-header {
  font-size: 1rem;
  margin-top: 0.5em;
  font-weight: var(--font-weight-regular);
}

.footer {
  background-color: var(--color-primary-900);
  color: var(--color-text-100);
  text-align: center;
  padding: 1em;
}

.footer p {
  font-size: 0.75rem;
  font-weight: var(--font-weight-bold);
  letter-spacing: 5px;
  opacity: 0.5;
}

.button {
  width: 100%;
  font-size: 1rem;
  font-weight: var(--font-weight-bold);
  text-transform: uppercase;
  text-align: center;
  background-color: var(--color-primary-900);
  color: var(--color-text-100);
  padding: 0.5em;
  border: none;
  border-radius: 5px;
}

.search-form {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 1em 0.5em;
}

.search-form .button {
  grid-column: span 3;
}

.select-date {
  display: flex;
  grid-column: span 3;
  gap: 0.5em;
}

select {
  width: min(300px, 100%);
  padding: 5px;
}

.list-of-airport {
  text-align: center;
  padding: 2em 0;
}

.section-title {
  font-size: 1.5rem;
  font-weight: var(--font-weight-bold);
  padding: 0.5em 0;
}

.airport-table {
  table-layout: fixed;
  width: 100%;
  max-width: 500px;
  border-collapse: collapse;
  border: 2px solid var(--color-primary-900);
}

.airport-table thead th:first-child {
  width: 30%;
}

.airport-table tbody tr:nth-child(odd) {
  background-color: var(--color-primary-200);
}

.airport-table th {
  font-weight: var(--font-weight-bold);
  font-size: 1.25rem;
}

.airport-table th,
.airport-table td {
  padding: 0.5em 0;
  border: 2px solid var(--color-primary-900);
}

@media only screen and (min-width: 600px) {
  .primary-header {
    padding: 4em;
  }

  .main-header {
    font-size: 4rem;
  }

  .sub-header {
    font-size: 1.5rem;
  }
}

